# open-phoenix-live

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
client/: README.md  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: ChatInterface.js  VideoInterface.js
client/src/services/: WebSocketManager.js
client/src/styles/: index.css
docker/: Dockerfile.llm  Dockerfile.render  Dockerfile.stt  Dockerfile.tts  README.md  docker-compose.yml
models/: Makefile  README.md
models/3d_gs/: README.md
models/stt/: README.md
models/tts/: README.md
scripts/: deploy.sh  dev.sh  download_models.sh  lint.sh  setup.sh  test.sh  verify_models.sh
server/: README.md  llm_service.py  rendering_service.py  stt_service.py  tts_service.py
server/animation/: real_time_drivers.py
server/utils/: __init__.py  audio.py  error_handler.py  transforms.py  video.py
