[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# Exclude files or directories matching these patterns
/(models/|data/|docs/)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"